--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.72.6",
     "react-native-fast-collapsible": "^1.1.1",
     "react-native-paper": "^5.11.1",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-reanimated": "~3.3.0",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
